--- a/index.html
+++ b/index.html
@@ -158,18 +158,27 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terimah kasih brooww!</strong> pesanmu sa sdh terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="rafi-contact-form"> 
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkapmu dulu</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               <div class="mb-3">
                 <label for="email" class="form-label">Email mu coba</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               <div class="mb-3">
                     <label for="pesan" class="form-label">pesanmu apa kawan</label>
-                    <textarea class="form-control" id="pesan" rows="3"></textarea>
+                    <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                   </div>
-              <button type="submit" class="btn btn-success mb-3">kirimkan rafi</button>
+              <button type="submit" class="btn btn-success btn-kirim">kirimkan rafi</button>
+
+              <button class="btn btn-success btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -186,4 +195,33 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
+
+
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxZQ95gkCzbdiKp_Z_NYWlXbX9uxdw2b_KvryK7JuZM-eJVDnNWm56qB7G45Nv2jPtGDQ/exec'
+    const form = document.forms['rafi-contact-form']
+    const btnKirim = document.querySelector('.btn-kirim');
+    const btnLoading = document.querySelector('.btn-loading');
+    const myAlert = document.querySelector('.my-alert');
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      // ketika tombol submit di klik
+      // tampilkan tombol loading, hilangkan tombol kirim
+      btnLoading.classList.toggle('d-none')
+      btnKirim.classList.toggle('d-none')
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+              // tampilkan tombol loading, hilangkan tombol kirim
+              btnLoading.classList.toggle('d-none')
+              btnKirim.classList.toggle('d-none')
+              // tampilkan alert
+              myAlert.classList.toggle('d-none')
+              // reset formnya
+              form.reset()
+          console.log('Success!', response)
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </html>
